@@ -1,8 +1,9 @@
-#This file is part of Tryton.  The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms.
+#This file is part of Tryton.  The COPYRIGHT file at the top level of
+#this repository contains the full copyright notices and license terms.
 import gtk
-import math
 import locale
 from interface import WidgetInterface
+import tryton.common as common
 
 
 class FloatTime(WidgetInterface):
@@ -30,15 +31,38 @@ class FloatTime(WidgetInterface):
 
     def text_to_float(self, text):
         try:
-            if text and ':' in text:
-                # assume <hours>:<minutes>
-                h, m = text.split(':')
-                h = h or 0
-                m = m or 0
-                return round(int(h) + int(m)/60.0, 2)
-            else:
-                # try float in locale notion
-                return locale.atof(text)
+            try:
+                return round(locale.atof(text), 2)
+            except:
+                pass
+            conv = common.FLOAT_TIME_CONV
+            for key in common.FLOAT_TIME_SEPS.keys():
+                text = text.replace(common.FLOAT_TIME_SEPS[key], key + ' ')
+            value = 0
+            for buf in text.split(' '):
+                buf = buf.strip()
+                if ':' in buf:
+                    hour, min = buf.split(':')
+                    value += abs(int(hour or 0))
+                    value += abs(int(min or 0) * conv['m'])
+                    continue
+                elif '-' in buf and not buf.startswith('-'):
+                    hour, min = buf.split('-')
+                    value += abs(int(hour or 0))
+                    value += abs(int(min or 0) * conv['m'])
+                    continue
+                try:
+                    value += abs(locale.atof(buf))
+                    continue
+                except:
+                    pass
+                for sep in conv.keys():
+                    if buf.endswith(sep):
+                        value += abs(locale.atof(buf[:-len(sep)])) * conv[sep]
+                        break
+            if text.startswith('-'):
+                value *= -1
+            return round(value, 2)
         except:
             return 0.0
 
@@ -54,10 +78,33 @@ class FloatTime(WidgetInterface):
             self.entry.set_text('00:00')
             return False
         val = model_field.get(model)
-        value = '%02d:%02d' % (math.floor(abs(val)),
-                round(abs(val)%1+0.01, 2) * 60)
+
+        conv = common.FLOAT_TIME_CONV
+
+        months = int(abs(val) / conv['M'])
+        weeks = int((abs(val) - months * conv['M']) / conv['w'])
+        days = int((abs(val) - months * conv['M'] - weeks * conv['w']) \
+                / conv['d'])
+        hours = int(abs(val) - months * conv['M'] - weeks * conv['w'] \
+                - days * conv['d'])
+        mins = round((abs(val) - months * conv['M'] - weeks * conv['w'] \
+                - days * conv['d'] - hours)% 1, 2) / conv['m']
+        value = ''
+        if months:
+            value += ' ' + locale.format('%d' + common.FLOAT_TIME_SEPS['M'],
+                    months, True)
+        if weeks:
+            value += ' ' + locale.format('%d' + common.FLOAT_TIME_SEPS['w'],
+                    weeks, True)
+        if days:
+            value += ' ' + locale.format('%d' + common.FLOAT_TIME_SEPS['d'],
+                    days, True)
+        if hours or mins:
+            value += ' %02d:%02d' % (hours, mins)
+        value = value.strip()
         if val < 0:
             value = '-' + value
+
         self.entry.set_text(value)
 
     def display_value(self):
