@@ -1,3 +1,5 @@
+* Improve float time widget to handle month, week and day
+
 Version 1.2.0 - 2009-04-20
 * Bug fixes (see mercurial logs for details)
 * Make graph works also with datetime
